--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@monaco-editor/react": "^4.3.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
-    "@types/node": "^12.12.2",
+    "@types/node": "^12.20.37",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.0.5",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
