--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.25.0",
     "find-free-port": "^2.0.0",
     "http-terminator": "^3.0.0",
+    "monaco-vim": "^0.1.19",
     "open": "^8.0.7",
     "prettier": "^2.2.1",
     "react-dom": "^17.0.2",
